--- a/whoogle.template.env
+++ b/whoogle.template.env
@@ -84,7 +84,7 @@
 #WHOOGLE_CONFIG_URL=https://<whoogle url>/
 
 # Set custom CSS styling/theming
-#WHOOGLE_CONFIG_STYLE=":root {
+WHOOGLE_CONFIG_STYLE=":root {
     /* LIGHT THEME COLORS */
     --whoogle-logo: #c4a7e7;
     --whoogle-page-bg: #faf4ed;
