--- a/whoogle.env
+++ b/whoogle.env
@@ -30,10 +30,10 @@
 #WHOOGLE_URL_PREFIX=""
 
 # Restrict results to only those near a particular city
-#WHOOGLE_CONFIG_NEAR=denver
+WHOOGLE_CONFIG_NEAR=los_angeles
 
 # See app/static/settings/countries.json for values
-#WHOOGLE_CONFIG_COUNTRY=US
+WHOOGLE_CONFIG_COUNTRY=US
 
 # See app/static/settings/languages.json for values
 #WHOOGLE_CONFIG_LANGUAGE=lang_en
@@ -42,7 +42,7 @@
 #WHOOGLE_CONFIG_SEARCH_LANGUAGE=lang_en
 
 # Disable changing of config from client
-#WHOOGLE_CONFIG_DISABLE=1
+WHOOGLE_CONFIG_DISABLE=1
 
 # Block websites from search results (comma-separated list)
 #WHOOGLE_CONFIG_BLOCK=pinterest.com,whitehouse.gov
@@ -72,10 +72,10 @@
 #WHOOGLE_MINIMAL=0
 
 # Set the number of results per page
-#WHOOGLE_RESULTS_PER_PAGE=10
+WHOOGLE_RESULTS_PER_PAGE=10
 
 # Controls visibility of autocomplete/search suggestions
-#WHOOGLE_AUTOCOMPLETE=1
+WHOOGLE_AUTOCOMPLETE=1
 
 # The port where Whoogle will be exposed
 #EXPOSE_PORT=5000
